query parameters in local api gateway